[package]
name = "fast_log_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4.17"
fast_log = { version = "1.5.54" }
prometheus-client = "0.19.0"
hyper = { version = "0.14.24", features = ["server", "http1", "tcp"] }
flume = "0.10.14"
notify = { version = "5.1.0" }
notify-debouncer-mini = { version = "0.2.0" }
